# fcitx5-hangul-debug

./: .gitignore  .gitmodules  README.md  gradle.properties  settings.gradle.kts
.github/workflows/: build-arm64.yml  nix.yml  publish.yml  pull_request.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/brycewg/asrkb/aidl/: IExternalSpeechService.aidl  ISpeechCallback.aidl  SpeechConfig.aidl
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/brycewg/asrkb/aidl/: SpeechConfig.kt
app/src/main/java/jaygoo/widget/wlv/: RenderView.java  WaveLineView.java
app/src/main/java/org/fcitx/fcitx5/android/: FcitxRemoteService.kt
app/src/main/java/org/fcitx/fcitx5/android/data/prefs/: AppPrefs.kt
app/src/main/java/org/fcitx/fcitx5/android/input/: FcitxInputMethodService.kt  PerAppImeManager.kt
app/src/main/java/org/fcitx/fcitx5/android/input/editorinfo/: EditorInfoWindow.kt
app/src/main/java/org/fcitx/fcitx5/android/input/keyboard/: BaseKeyboard.kt  CommonKeyActionListener.kt  KeyAction.kt  KeyboardWindow.kt  SpaceLongPressBehavior.kt  TextKeyboard.kt
app/src/main/java/org/fcitx/fcitx5/android/input/picker/: PickerPolicy.kt
app/src/main/java/org/fcitx/fcitx5/android/input/popup/: EmojiModifier.kt  PopupPreset.kt
app/src/main/java/org/fcitx/fcitx5/android/input/voice/: WaveformView.kt
app/src/main/java/org/fcitx/fcitx5/android/link/: AsrkbSpeechClient.kt  MicPermissionActivity.kt  VoiceOverlayUiBridge.kt
app/src/main/res/drawable/: ic_baseline_content_copy_24.xml
app/src/main/res/values/: attrs_wave_line_view.xml  strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
build-logic/convention/src/main/kotlin/: AndroidAppConventionPlugin.kt  AndroidPluginAppConventionPlugin.kt  NativeBuildTasks.kt
gradle/wrapper/: gradle-wrapper.properties
lib/fcitx5-chinese-addons/src/main/cpp/: CMakeLists.txt
lib/fcitx5-chinese-addons/src/main/cpp/fcitx5-chinese-addons/: README.md
lib/fcitx5/src/main/cpp/cmake/: FindECM.cmake
lib/fcitx5/src/main/cpp/cmake/ecm/: ECMConfig.cmake  ECMConfigVersion.cmake
lib/fcitx5/src/main/cpp/prebuilt/: toolchain-versions.json
lib/fcitx5/src/main/cpp/prebuilt/boost/arm64-v8a/lib/cmake/boost_algorithm-1.90.0/: boost_algorithm-config.cmake
lib/fcitx5/src/main/cpp/prebuilt/boost/arm64-v8a/lib/cmake/boost_align-1.90.0/: boost_align-config.cmake  boost_align-targets.cmake
lib/fcitx5/src/main/cpp/prebuilt/boost/arm64-v8a/lib/cmake/boost_assign-1.90.0/: boost_assign-config.cmake
lib/fcitx5/src/main/cpp/prebuilt/boost/arm64-v8a/lib/cmake/boost_bimap-1.90.0/: boost_bimap-targets.cmake
lib/fcitx5/src/main/cpp/prebuilt/boost/arm64-v8a/lib/cmake/boost_bind-1.90.0/: boost_bind-config.cmake  boost_bind-targets.cmake
lib/fcitx5/src/main/cpp/prebuilt/boost/arm64-v8a/lib/cmake/boost_compute-1.90.0/: boost_compute-config.cmake
lib/fcitx5/src/main/cpp/prebuilt/boost/arm64-v8a/lib/cmake/boost_concept_check-1.90.0/: boost_concept_check-targets.cmake
lib/fcitx5/src/main/cpp/prebuilt/boost/arm64-v8a/lib/cmake/boost_config-1.90.0/: boost_config-targets.cmake
lib/fcitx5/src/main/cpp/prebuilt/boost/arm64-v8a/lib/cmake/boost_container-1.90.0-static/: boost_container-config.cmake
lib/fcitx5/src/main/cpp/prebuilt/libime/data/: extb.dict  zh_CN.lm.predict
lib/fcitx5/src/main/cpp/prebuilt/libuv/x86/include/uv/: unix.h
lib/fcitx5/src/main/share/ECM/kde-modules/: KDEPackageAppTemplates.cmake
lib/libime/src/main/cpp/: CMakeLists.txt
lib/plugin-base/src/main/: AndroidManifest.xml
plugin/anthy/src/main/cpp/anthy-cmake/anthy-unicode/: Makefile.am  meson.build  meson_dist.py  meson_options.txt
plugin/anthy/src/main/cpp/anthy-cmake/anthy-unicode/anthy/: meson.build  xchar.h
plugin/anthy/src/main/cpp/anthy-cmake/anthy-unicode/calctrans/: calctrans.c  meson.build
plugin/anthy/src/main/cpp/anthy-cmake/anthy-unicode/depgraph/: meson.build  mkdepgraph.c
plugin/anthy/src/main/cpp/anthy-cmake/anthy-unicode/mkanthydic/: meson.build  mkfiledic.c
plugin/anthy/src/main/cpp/anthy-cmake/anthy-unicode/mkworddic/: meson.build  mkdic.c
plugin/anthy/src/main/cpp/anthy-cmake/anthy-unicode/src-diclib/: conf.c  logger.c  meson.build
plugin/anthy/src/main/cpp/anthy-cmake/anthy-unicode/src-main/: context.c  meson.build
plugin/anthy/src/main/cpp/anthy-cmake/anthy-unicode/src-ordering/: meson.build
plugin/anthy/src/main/cpp/anthy-cmake/anthy-unicode/src-splitter/: meson.build
plugin/anthy/src/main/cpp/anthy-cmake/anthy-unicode/src-util/: anthy-unicode.el  meson.build
plugin/anthy/src/main/cpp/anthy-cmake/anthy-unicode/src-worddic/: meson.build
plugin/anthy/src/main/cpp/anthy-cmake/anthy-unicode/test/: meson.build
plugin/chewing/src/main/cpp/fcitx5-chewing/: CMakeLists.txt  README.md  org.fcitx.Fcitx5.Addon.Chewing.metainfo.xml.in
plugin/chewing/src/main/cpp/fcitx5-chewing/po/: fr.po  ka.po  ru.po  vi.po  zh_CN.po  zh_TW.po
plugin/chewing/src/main/cpp/fcitx5-chewing/src/: eim.cpp  eim.h
plugin/clipboard-filter/ClearURLsRules/.github/workflows/: deploy.yml
plugin/hangul/src/main/cpp/fcitx5-hangul/po/: ko.po
plugin/jyutping/src/main/cpp/libime-jyutping/: CMakeLists.txt
plugin/jyutping/src/main/cpp/libime-jyutping/src/engine/: org.fcitx.Fcitx5.Addon.Jyutping.metainfo.xml.in
plugin/rime/src/main/cpp/fcitx5-rime/: CMakeLists.txt  README.md  org.fcitx.Fcitx5.Addon.Rime.metainfo.xml.in
plugin/rime/src/main/cpp/fcitx5-rime/po/: ka.po
plugin/rime/src/main/cpp/fcitx5-rime/src/: rimecandidate.cpp  rimecandidate.h
plugin/sayura/src/main/cpp/fcitx5-sayura/: CMakeLists.txt  org.fcitx.Fcitx5.Addon.Sayura.metainfo.xml.in
plugin/sayura/src/main/cpp/fcitx5-sayura/po/: fr.po  ka.po
plugin/thai/src/main/cpp/: CMakeLists.txt
plugin/thai/src/main/cpp/fcitx5-libthai/: CMakeLists.txt  org.fcitx.Fcitx5.Addon.LibThai.metainfo.xml.in
plugin/thai/src/main/cpp/fcitx5-libthai/po/: LINGUAS  ka.po  zh_TW.po
plugin/thai/src/main/cpp/fcitx5-libthai/src/: thaikb.cpp
(+259 files in other folders)
